add dialog interactions

--- a/app/views/exams/_exercise_footer.html.erb
+++ b/app/views/exams/_exercise_footer.html.erb
@@ -3,14 +3,14 @@
     <i></i>
     <span><u>H</u>elp</span>
   </a>
-  <a class="btn-end left" href="#">
+  <a class="btn-end left js-end-exam" href="#">
     <i></i>
     <span><u>E</u>nd Exam</span>
   </a>
   <a class="btn-end left" href="#">
     <span><u>P</u>ause Exam</span>
   </a>
-  <a class="btn-next right" href="<%= next_exercise_url(@exam, @exercise) %>">
+  <a class="btn-next right js-next-exercise" href="<%= next_exercise_url(@exam, @exercise) %>">
     <span><u>N</u>ext</span>
     <i></i>
   </a>
