--- a/app/views/exams/exercise.html.erb
+++ b/app/views/exams/exercise.html.erb
@@ -10,3 +10,5 @@
 </div>
 
 <%= render 'exams/end_exam_dialog' %>
+<%= render 'exams/confirm_anwser_dialog' %>
+<%= render 'exams/unanwsered_dialog' %>
