--- a/app/views/exams/_confirm_anwser_dialog.html.erb
+++ b/app/views/exams/_confirm_anwser_dialog.html.erb
@@ -1,4 +1,4 @@
-<div class="dialog">
+<div class="dialog js-confirm-anwser">
   <div class="title">
     Anwser Confirmation
     <i class="close"></i>
