--- a/app/views/exams/_intro_footer.html.erb
+++ b/app/views/exams/_intro_footer.html.erb
@@ -3,7 +3,7 @@
     <i></i>
     <span><u>H</u>elp</span>
   </a>
-  <a class="btn-end left" href="#">
+  <a class="btn-end left js-end-exam" href="#">
     <i></i>
     <span><u>E</u>nd Exam</span>
   </a>
