--- a/app/views/exams/_confirm_anwser_dialog.html.erb
+++ b/app/views/exams/_confirm_anwser_dialog.html.erb
@@ -1,11 +1,13 @@
-<div class="dialog js-confirm-anwser">
+<div class="dialog js-confirm-anwser" style="margin-left: -253px;">
   <div class="title">
     Anwser Confirmation
     <i class="close"></i>
   </div>
   <div class="body">
     <p>Click Yes to confirm your answer and continue to the next question.</p>
-    <a href="#" class="dialog-close">O<u>K</u></a>
-    <a href="#" class="dialog-close">O<u>K</u></a>
+  </div>
+  <div class="footer">
+    <a href="#" class="dialog-close bordered"><u>Y</u>es</a>
+    <a href="#" class="dialog-close"><u>N</u>o</a>
   </div>
 </div>
