--- a/app/views/exams/_end_exam_dialog.html.erb
+++ b/app/views/exams/_end_exam_dialog.html.erb
@@ -1,4 +1,4 @@
-<div class="dialog js-end-exam-dialog">
+<div class="dialog js-end-exam-dialog" style="margin-left: -228px;">
   <div class="title">
     End Exam
     <i class="close"></i>
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="footer">
-    <a href="#" class="dialog-close"><u>Y</u>es</a>
+    <a href="#" class="js-yes"><u>Y</u>es</a>
     <a href="#" class="dialog-close bordered"><u>N</u>o</a>
   </div>
 </div>
