--- a/app/views/exams/_exercise_footer.html.erb
+++ b/app/views/exams/_exercise_footer.html.erb
@@ -7,7 +7,7 @@
     <i></i>
     <span><u>E</u>nd Exam</span>
   </a>
-  <a class="btn-end left" href="#">
+  <a class="btn-end left js-pause-exam-btn" href="#">
     <span><u>P</u>ause Exam</span>
   </a>
   <a class="btn-next right js-next-exercise" href="<%= next_exercise_url(@exam, @exercise) %>">
