fix some wording

--- a/app/views/exams/_intro_footer.html.erb
+++ b/app/views/exams/_intro_footer.html.erb
@@ -12,7 +12,7 @@
     <i></i>
   </a>
   <a class="btn-skip right" href="<%= skip_instructions_url(@exam) %>">
-    <span>跳过说明</span>
+    <span>Skip</span>
   </a>
 </div>
 
