--- a/app/views/exams/_intro1.html.erb
+++ b/app/views/exams/_intro1.html.erb
@@ -1,5 +1,6 @@
-<p style="font-size: 14px; color: red">注意：从此页面开始接下来12个页面均为考试说明部分，你可以选择右下角【跳过说明】按钮直接进入考试。但在真实的考试中不能跳过该部分。</p>
-<h1>Welcome to KMF Test System</h1>
+<p style="font-size: 14px; color: red; font-weight: bold">
+Note: The following 12 pages are test instructions. You could use the [Skip] button at the bottom right to skip them now, but you won't be able to skip them in real tests.</p>
+<h1>Welcome to GMAT770 Test System</h1>
 <p>You are about to begin a simulation of the Graduate Management Admission Test(GMAT).</p>
 <p>When you actually sit for the exam,the following policies apply throughout the test:</p>
 <p>Before you take the exam,you will be required to agree to the GMAT Nondisclosure Agreement and General Terms of Use.You can view the Nondisclosure Agreement and Test Taker Rules by visiting www.mba.com.</p>
