--- a/app/views/admin/_admin_nav.html.erb
+++ b/app/views/admin/_admin_nav.html.erb
@@ -19,6 +19,10 @@
   <li><div>用户管理</div></li>
   <li class="<%= controller_name == 'users' ? 'active' : '' %>"><a href="<%= admin_users_path %>">用户列表</a></li>
   <li class="<%= controller_name == 'user_groups' ? 'active' : '' %>"><a href="<%= admin_user_groups_path %>">用户组</a></li>
+
+  <li><div>模考管理</div></li>
+  <li class="<%= controller_name == 'exams' ? 'active' : '' %>"><a href="<%= admin_exams_path %>">模考列表</a></li>
+
   <li><div>其他</div></li>
   <li class="<%= controller_name == 'teachers' ? 'active' : '' %>"><a href="<%= admin_teachers_path %>">教师管理</a></li>
   <li class="<%= controller_name == 'about' ? 'active' : '' %>"><a href="<%= edit_admin_about_path(1) %>">关于我们</a></li>
