--- a/app/views/exams/exercise.html.erb
+++ b/app/views/exams/exercise.html.erb
@@ -13,3 +13,7 @@
 <%= render 'exams/end_exam_dialog' %>
 <%= render 'exams/confirm_anwser_dialog' %>
 <%= render 'exams/unanwsered_dialog' %>
+
+<% content_for :scripts do %>
+  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+<% end -%>
