form not working...

--- a/app/assets/stylesheets/exams_controller.scss
+++ b/app/assets/stylesheets/exams_controller.scss
@@ -95,6 +95,8 @@ $yellow: #fefe00;
       display: block;
       text-decoration: none;
       margin: 30px auto;
+      border: none;
+      cursor: pointer;
 
       &:hover {
         background: #0889d4;
