--- a/app/views/exams/_exercise_footer.html.erb
+++ b/app/views/exams/_exercise_footer.html.erb
@@ -10,7 +10,7 @@
   <a class="btn-end left js-pause-exam-btn" href="#">
     <span><u>P</u>ause Exam</span>
   </a>
-  <a class="btn-next right js-next-exercise" href="<%= next_exercise_url(@exam, @exercise) %>">
+  <a class="btn-next right js-next-exercise" href="javascript:;">
     <span><u>N</u>ext</span>
     <i></i>
   </a>
