--- a/app/views/exams/_confirm_anwser_dialog.html.erb
+++ b/app/views/exams/_confirm_anwser_dialog.html.erb
@@ -7,7 +7,7 @@
     <p>Click Yes to confirm your answer and continue to the next question.</p>
   </div>
   <div class="footer">
-    <a href="<%= next_exercise_url(@exam, @exercise) %>" class="bordered"><u>Y</u>es</a>
+    <a href="javascript:;" data-exam-id="<%= @exam.id %>" data-take-id="<%= @take.id %>" data-url="<%= next_exercise_url(@exam, @exercise) %>" class="bordered js-confirm-anwser-yes"><u>Y</u>es</a>
     <a href="javascript:;" class="dialog-close"><u>N</u>o</a>
   </div>
 </div>
