--- a/app/views/exams/_exercise.html.erb
+++ b/app/views/exams/_exercise.html.erb
@@ -1,8 +1,8 @@
 <p><%= raw @exercise.title %></p>
 <ul class="multi-choice-list">
   <% unless @exercise.empty_choices? %>
-    <% @exercise.choices.each do |c| %>
-      <li><label><input type="radio" name="choice">&nbsp;<%= c %></label></li>
+    <% @exercise.choices.each_with_index do |c, i| %>
+      <li><label><input type="radio" name="choice" value="<%= i %>">&nbsp;<%= c %></label></li>
     <% end -%>
   <% end -%>
 </ul>
