--- a/app/views/admin/exams/_form.html.erb
+++ b/app/views/admin/exams/_form.html.erb
@@ -8,19 +8,19 @@
   <div class="form-group">
     <label for="seq" class="col-sm-2 control-label">系列</label>
     <div class="col-sm-10">
-      <%= f.text_field :exam_type, class: 'form-control' %>
+      <%= f.text_field :exam_type, class: 'form-control', placeholder: '填写数字：1代表GWD，2代表770' %>
     </div>
   </div>
   <div class="form-group">
     <label for="seq" class="col-sm-2 control-label">考题</label>
     <div class="col-sm-10">
-      <%= f.text_field :exercises, class: 'form-control' %>
+      <%= f.text_field :exercises, class: 'form-control', placeholder: '填写题目编号序列，以半角逗号分隔' %>
     </div>
   </div>
   <div class="form-group">
     <label for="seq" class="col-sm-2 control-label">预计时长</label>
     <div class="col-sm-10">
-      <%= f.text_field :estimated_time, class: 'form-control' %>
+      <%= f.text_field :estimated_time, class: 'form-control', placeholder: '填写数字，单位是「分钟」' %>
     </div>
   </div>
   <div class="form-group">
