calculate results and time used

--- a/app/views/exams/result.html.erb
+++ b/app/views/exams/result.html.erb
@@ -1,5 +1,6 @@
 <div class="container p2 header-margin">
   <h1>Yay, you're done! Here is your result: </h1>
   <p>Anwsers: <%= @take.anwsers %></p>
-  <p>Time used: <%= @take.time_used %> mins</p>
+  <p>Results: <%= @take.anwser_results %></p>
+  <p>Time used: <%= @take.time_used_as_string %> mins</p>
 </div>
