--- a/app/views/admin/exercises/_form.html.erb
+++ b/app/views/admin/exercises/_form.html.erb
@@ -17,6 +17,8 @@
 
   <% end -%>
 
+  <input type="hidden" name="is_rc" value="<%= @is_rc %>">
+
   <div class="form-group">
     <label for="seq" class="col-sm-2 control-label">题号</label>
     <div class="col-sm-10">
