--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -21,15 +21,29 @@
       </div>
 
       <div class="exercise-detail">
-        <p class="question"><%= raw @exercise.title %></p>
-        <ul>
-          <% options = ['A', 'B', 'C', 'D', 'E'] %>
-          <% unless @exercise.empty_choices? %>
-            <% @exercise.choices.each_with_index do |c, index| %>
-              <li><label><input type="radio" name="choice"><b>(<%= options[index] %>)</b>&nbsp;<%= c %></label></li>
-            <% end -%>
+        <% if @exercise.is_rc %>
+          <div class="left passage">
+            <p>
+              <%= raw @exercise.passage %>
+            </p>
+          </div>
+        <% end -%>
+        <% if @exercise.is_rc %>
+          <div class="passage-right">
+        <% end -%>
+            <p class="question"><%= raw @exercise.title %></p>
+            <ul>
+              <% options = ['A', 'B', 'C', 'D', 'E'] %>
+              <% unless @exercise.empty_choices? %>
+                <% @exercise.choices.each_with_index do |c, index| %>
+                  <li><label><input type="radio" name="choice"><b>(<%= options[index] %>)</b>&nbsp;<%= c %></label></li>
+                <% end -%>
+              <% end -%>
+            </ul>
+          <% if @exercise.is_rc %> 
+            </div>
           <% end -%>
-        </ul>
+        
         <button class="btn show-guides">显示正确答案和解析</button>
 
         <div class="guides">
