--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -22,3 +22,60 @@ form.edit_user {
     }
   }
 }
+
+.profile-header {
+  padding: 32px 0;
+
+  .avatar {
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    float: left;
+  }
+
+  .info {
+    float: left;
+    margin-left: 16px;
+  }
+
+  .username {
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 8px;
+  }
+
+  .joined {
+    color: #999;
+    font-size: 13px;
+  }
+
+  .related {
+    float: right;
+    padding: 13px 0;
+    line-height: 30px;
+
+    img {
+      vertical-align: middle;
+      margin-left: 56px;
+    }
+  }
+}
+
+.take {
+  padding: 24px 32px;
+  background: white;
+  margin-bottom: 1px;
+
+  .exam-title {
+    width: 360px;
+    display: inline-block;
+  }
+
+  .time-taken {
+    color: #999;
+  }
+
+  a {
+    float: right;
+  }
+}
