--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -1,6 +1,6 @@
 <% if current_user %>
   <div class="login">
-    <a href="#"><%= current_user.nickname %></a>
+    <%= link_to current_user.nickname, current_user %>
     <%= link_to '退出登陆', logout_path, class: 'logout' %>
   </div>
 <% else %>
