--- a/app/views/exams/_intro4.html.erb
+++ b/app/views/exams/_intro4.html.erb
@@ -1,4 +1,4 @@
-<h1>Differences between KMF Test System and the GMAT Exam</h1>
+<h1>Differences between GMAT770 Test System and the GMAT Exam</h1>
 
 <p>The tutorial,section instructions,exit screens,Background Information Question (BIQ) section,and Report or Cancel Scores screen are not timed in the KMF Test System but WILL BE timed during the GMAT exam.You may want to spend extra time on these screens in the KMF Test System to familiarize yourself with them before you take the actual test.</p>
 
