separate verbal and quant inputs

--- a/app/views/admin/exams/index.html.erb
+++ b/app/views/admin/exams/index.html.erb
@@ -7,7 +7,8 @@
     <th>名称</th>
     <th>类型</th>
     <th>预计耗时</th>
-    <th>题目</th>
+    <th>Verbal题目</th>
+    <th>Quant题目</th>
     <th style="width:80px">操作</th>
   </thead>
   <tbody>
@@ -17,7 +18,8 @@
         <td><%= exam.name %></td>
         <td><%= exam.exam_type == 1 ? 'GWD系列' : '770系列' %></td>
         <td><%= exam.estimated_time %> mins</td>
-        <td><%= exam.exercises %></td>
+        <td><%= exam.verbal_exercises %></td>
+        <td><%= exam.quant_exercises %></td>
         <td>
           <%= link_to '编辑', edit_admin_exam_path(exam) %>
           <%= link_to '删除', admin_exam_path(exam), class: 'delete-exam' %>
