--- a/app/views/admin/exams/_form.html.erb
+++ b/app/views/admin/exams/_form.html.erb
@@ -8,15 +8,24 @@
   <div class="form-group">
     <label for="seq" class="col-sm-2 control-label">系列</label>
     <div class="col-sm-10">
-      <%= f.text_field :exam_type, class: 'form-control', placeholder: '填写数字：1代表GWD，2代表770' %>
+      <label class="checkbox-inline"><%= f.radio_button :exam_type, 1 %> GWD</label>
+      <label class="checkbox-inline"><%= f.radio_button :exam_type, 2 %> 770</label>
     </div>
   </div>
   <div class="form-group">
-    <label for="seq" class="col-sm-2 control-label">考题</label>
+    <label for="seq" class="col-sm-2 control-label">Verbal考题</label>
     <div class="col-sm-10">
-      <%= f.text_field :exercises, class: 'form-control', placeholder: '填写题目编号序列，以半角逗号分隔' %>
+      <%= f.text_field :verbal_exercises, class: 'form-control', placeholder: '填写题目编号序列，以半角逗号分隔' %>
     </div>
   </div>
+
+  <div class="form-group <%= (@exam.exam_type == 1) ? 'hidden' : ''  %>">
+    <label for="seq" class="col-sm-2 control-label">Quant考题</label>
+    <div class="col-sm-10">
+      <%= f.text_field :quant_exercises, class: 'form-control', placeholder: '填写题目编号序列，以半角逗号分隔' %>
+    </div>
+  </div>
+
   <div class="form-group">
     <label for="seq" class="col-sm-2 control-label">预计时长</label>
     <div class="col-sm-10">
@@ -29,3 +38,15 @@
     </div>
   </div>
 <% end %>
+
+<script>
+  $('[name="exam[exam_type]"]').on('click', function(){
+    var selectedType = $(this).val();
+    var quantExercisesInput = $('#exam_quant_exercises').parents('.form-group');
+    if (selectedType === '1') {
+      quantExercisesInput.addClass('hidden');
+    } else {
+      quantExercisesInput.removeClass('hidden');
+    }
+  });
+</script>
