--- a/app/views/exams/_exercise_header.html.erb
+++ b/app/views/exams/_exercise_header.html.erb
@@ -2,6 +2,6 @@
   <h1><%= @exam.name %></h1>
   <div class="right">
     <div class="clock" id="clock"><i></i>Time cost <span class="minutes"><%= @exam.estimated_time %></span>:<span class="seconds">00</span></div>
-    <div class="location"><i></i>Location <%= current_location(@exam, @exercise) %> of <%= @exam.exercise_ids.length %></div>
+    <div class="location"><i></i>Location <%= current_location(@exam, @exercise) %> of <%= @exam.verbal_exercise_ids.length %></div>
   </div>
 </div>
