--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -1,5 +1,5 @@
 <div class="exam-main">
-  <div class="header"><h1>Exam name</h1></div>
+  <div class="header"><h1><%= @exam.name %></h1></div>
   <div class="top-bar"></div>
   <div class="content">
     <h1>欢迎使用 GMAT770 模考系统</h1>
