remove background image

--- a/app/assets/stylesheets/exam_layout.scss
+++ b/app/assets/stylesheets/exam_layout.scss
@@ -8,7 +8,7 @@
 
 html {
   height: 100%;
-  background: url(http://oya5a097g.bkt.clouddn.com/bg.jpg);
+  background: #333;
   font-family: Tahoma, "Helvetica Neue", "微软雅黑", sans-serif;
 }
 
