--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@
         <div class="take">
           <span class="exam-title"><%= take.exam.name %></span>
           <span class="time-taken"><%= take.created_at.to_formatted_s(:date_and_time) %></span>
-          <%= link_to '查看报告', "/exams/#{take.exam.id}/result" %>
+          <%= link_to '查看报告', "/exams/#{take.exam.id}/result?take_id=#{take.id}" %>
         </div>
       <% end -%>
     <% else %>
